--- a/Portfolio.html
+++ b/Portfolio.html
@@ -37,7 +37,7 @@
     <div class="about-me">
         <div class="container-fluid">
             <div class="col-12">
-                <h1 class="text-center">Who am I?</h1>
+                <h1>Who am I?</h1>
             </div>
         </div>
         <div class="container-lg">
@@ -64,7 +64,7 @@
     <div class="skills">
         <div class="row">
             <div class="col-12">
-                <h1 class="text-center">What can I do?</h1>
+                <h1>What can I do?</h1>
             </div>
         </div>
         <div class="container-fluid">
