about me finished

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -36,20 +36,18 @@
   </header>
   <main>
     <div class="about-me">
-        <div id="about-me-id">
-          <h1><br>I'm Johep<br>
-            it's a<br>
-            pleasure<br>
-          </h1>
+        <div class="about-me-id">
+          <h1>hello, I'm Johep</h1>
+          <h2>Front-end Developer</h2>
+          <p>Hey there! I'm a college student in my third-year on Computer Systems and Networking Engineering, passionate about technology and the world of engineering. 
+            Looking for elavating my habilities and strength them. I love the gym life, cars, and wine.
+          </p>
+          <button type="button" class="btn btn-light">See my CV</button>
+          <button type="button" class="btn btn-light rounded-5 border"><img src="media/github.svg" alt="github" height="25px" width="25px"></button>
+          <button type="button" class="btn btn-light rounded-5 border"><img src="media/linkedin.svg" alt="linkedin" height="25px" width="25px"></button>
         </div>
-        <div class="container-lg">
-            <div class="col-12">
-              <!-- <img src="media/yo.jpg" class="rounded float-start" alt="..."> -->
-                <p class="text-center"><br>Hey there! I'm a college student in my third-year on Computer Systems and Networking Engineering, passionate about technology and the world of engineering. 
-                    Looking for elavating my habilities and strength them. I love the gym life, cars, and wine.<br>Feel free to explore my portfolio to learn more about my projects and experiences, 
-                    and please do not hesitate to contact me if you have any questions or if you are interested in working with me. I'm will be very exited to meet you!.<br>
-                </p>
-            </div>
+        <div class="image-container">
+          <img src="media/yo.jpg" class="rounded-5 border border-4" alt="mi-foto" width="330" height="390">
         </div>
     </div>
     <div class="skills">
@@ -144,7 +142,7 @@
     <div class="education">
       <div class="container-fluid">
           <div class="col-12">
-              <h1 id="education-id" class="text-center">My knowledge is from...</h1>
+              <h1 id="education-id">My knowledge is from...</h1>
           </div>
       </div>
       <div class="container-fluid d-flex justify-content-center">
@@ -177,6 +175,8 @@
       <div class="row">
         <div class="col-12">
           <h1 id="contact-id" class="text-center">Know me yourself!</h1>
+          <p>Feel free to explore my portfolio to learn more about my projects and experiences, 
+            and please do not hesitate to contact me if you have any questions or if you are interested in working with me. I'm will be very exited to meet you!.</p>
         </div>
       </div>
       <div class="text-center">
