--- a/Portfolio.html
+++ b/Portfolio.html
@@ -43,96 +43,62 @@
             Looking for elavating my habilities and strength them. I love the gym life, cars, and wine.
           </p>
           <button type="button" class="btn btn-light">See my CV</button>
-          <button type="button" class="btn btn-light rounded-5 border"><img src="media/github.svg" alt="github" height="25px" width="25px"></button>
-          <button type="button" class="btn btn-light rounded-5 border"><img src="media/linkedin.svg" alt="linkedin" height="25px" width="25px"></button>
+          <button href="https://github.com/Johepdgc" type="button" class="btn btn-light rounded-5 border"><img src="media/github.svg" alt="github" height="35px" width="15px"></button>
+          <button href="https://www.linkedin.com/in/johep-gradis-778ba4232/" type="button" class="btn btn-light rounded-5 border"><img src="media/linkedin.svg" alt="linkedin" height="35px" width="15px"></button>
         </div>
         <div class="image-container">
           <img src="media/yo.jpg" class="rounded-5 border border-4" alt="mi-foto" width="330" height="390">
         </div>
     </div>
     <div class="skills">
-        <div id="my-skills">
-            <div class="col-12">
-                <h1 id="skills-id">What can I do?</h1>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="col-12">
-                <ul class="list-unstyled">
-                    <li><h4>Technical skills</h4></li>
-                      <ul>
-                        <li>Programming in C#/.NET</li>
-                        <li>Programming in Kotlin</li>
-                        <li>Programming in CSS</li>
-                        <li>Programming in Python</li>
-                        <li>Intermediate knowledge in HTML</li>
-                        <li>Knowledge in SQL databases</li>
-                        <li>Technical computer support</li>
-                        <li>Basic and minimalist vector design for logos</li>
-                      </ul>
-                    </li>
-                </ul>
-                <div class="d-flex justify-content-end">
-                  <ul class="list-unstyled">
-                    <li><h4 >Soft skills</h4></li>
-                      <ul>
-                        <li>Analytical</li>
-                        <li>Problem-solving</li>
-                        <li>Flexible</li>
-                        <li>Planner</li>
-                        <li>Organized</li>
-                        <li>Capable of taking on leadership roles</li>
-                        <li>Decision-making</li>
-                        <li>Innovative and creative thinking</li>
-                        <li>Responsible</li>
-                        <li>Respectful</li>
-                        <li>Adaptable</li>
-                        <li>Quick learner</li>
-                        <li>Enjoy learning and professional growth</li>
-                      </ul>
-                    </li>
-                </ul>
-                </div>
-            </div>
-        </div>
+        <div class="my-skills">
+          <div class="list">
+            <h2>Software Develoment? <img src="media/python.svg" alt="python" height="100px" width="85px"></h2>
+            <h2>Web development? <img src="media/html5.svg" alt="html5"><img src="media/css3.svg" alt="css3"><img src="media/javascript.svg" alt="javascript"></h2>
+            <h2>Databases? <img src="media/mysql.svg" alt="mysql" height="100px" width="85px"></h2>
+            <h2>Design? <img src="media/design.svg" alt="design"><img src="media/design2.svg" alt="design2"></h2>
+            <h1>Deal!</h1>
+            <h2><br>And perfectly excelent... Analytical. Problem-solving. Flexible. Planner. Leader. Creative. Responsible.
+              Respectful. Adaptable. Quick learner. Confortable with growth.
+            </h2>
+          </div>
+        </div>   
     </div>
     <div class="projects">
-      <div class="container-fluid">
+      <div class="my-projects">
+        <h1>Some works I've build</h1>
+        <div class="container-fluid">
           <div class="col-12">
-              <h1 id="projects-id" class="text-center">Some things I made...</h1>
-          </div>
-      </div>
-      <div class="container-fluid">
-        <div class="col-12">
-          <div class="card-group">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <div class="card-group">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-body-secondary">Last updated 3 mins ago</small>
+                </div>
               </div>
-              <div class="card-footer">
-                <small class="text-body-secondary">Last updated 3 mins ago</small>
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-body-secondary">Last updated 3 mins ago</small>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-body-secondary">Last updated 3 mins ago</small>
-              </div>
-            </div>
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-body-secondary">Last updated 3 mins ago</small>
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-body-secondary">Last updated 3 mins ago</small>
+                </div>
               </div>
             </div>
           </div>
