--- a/Portfolio.html
+++ b/Portfolio.html
@@ -24,11 +24,11 @@
         </button>
         <div class="collapse navbar-collapse d-flex flex-row-reverse nav nav-underline" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="#about-me-id">Me</a>
-            <a class="nav-link" href="#skills-id">Skills</a>
-            <a class="nav-link" href="#projects-id">Projects</a>
-            <a class="nav-link" href="#education-id">Education</a>
-            <a class="nav-link" href="#contact-id">Contact</a>
+            <a class="nav-link" href="#me">Me</a>
+            <a class="nav-link" href="#my-do's">Skills</a>
+            <a class="nav-link" href="#work">Projects</a>
+            <a class="nav-link" href="#path">Education</a>
+            <a class="nav-link" href="#my-data">Contact</a>
           </div>
         </div>
       </div>
@@ -36,24 +36,24 @@
   </header>
   <main>
     <div class="about-me">
-        <div class="about-me-id">
+        <div class="about-me-id" id="me">
           <h1>hello, I'm Johep</h1>
           <h2>Front-end Developer</h2>
           <p>Hey there! I'm a college student in my third-year on Computer Systems and Networking Engineering, passionate about technology and the world of engineering. 
             Looking for elavating my habilities and strength them. I love the gym life, cars, and wine.
           </p>
-          <button type="button" class="btn btn-light">See my CV</button>
-          <button href="https://github.com/Johepdgc" type="button" class="btn btn-light rounded-5 border"><img src="media/github.svg" alt="github" height="35px" width="15px"></button>
-          <button href="https://www.linkedin.com/in/johep-gradis-778ba4232/" type="button" class="btn btn-light rounded-5 border"><img src="media/linkedin.svg" alt="linkedin" height="35px" width="15px"></button>
+          <button type="button" class="btn">See my CV</button>
+          <button href="https://github.com/Johepdgc" type="button" class="btn rounded-circle"><img src="media/github.svg" alt="github" height="45px" width="25px"></button>
+          <button href="https://www.linkedin.com/in/johep-gradis-778ba4232/" type="button" class="btn rounded-circle"><img src="media/linkedin.svg" alt="linkedin" height="45px" width="25px"></button>
         </div>
         <div class="image-container">
           <img src="media/yo.jpg" class="rounded-5 border border-4" alt="mi-foto" width="330" height="390">
         </div>
     </div>
-    <div class="skills">
+    <div class="skills" id="my-do's">
         <div class="my-skills">
           <div class="list">
-            <h2>Software Develoment? <img src="media/python.svg" alt="python" height="100px" width="85px"></h2>
+            <h2>Software Develoment? <img src="media/python.svg" alt="python" height="100px" width="85px"><img src="media/csharp.svg" alt="c#"><img src="media/kotlin.svg" alt="kotlin"><img src="media/git.svg" alt="git"></h2>
             <h2>Web development? <img src="media/html5.svg" alt="html5"><img src="media/css3.svg" alt="css3"><img src="media/javascript.svg" alt="javascript"></h2>
             <h2>Databases? <img src="media/mysql.svg" alt="mysql" height="100px" width="85px"></h2>
             <h2>Design? <img src="media/design.svg" alt="design"><img src="media/design2.svg" alt="design2"></h2>
@@ -65,40 +65,24 @@
         </div>   
     </div>
     <div class="projects">
-      <div class="my-projects">
+      <div class="my-projects" id="work">
         <h1>Some works I've build</h1>
-        <div class="container-fluid">
-          <div class="col-12">
-            <div class="card-group">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-body-secondary">Last updated 3 mins ago</small>
-                </div>
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col">
+            <div class="card card text-bg-dark mb-3">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Project1</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-body-secondary">Last updated 3 mins ago</small>
-                </div>
-              </div>
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-body-secondary">Last updated 3 mins ago</small>
-                </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card card text-bg-dark mb-3">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Project2</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
           </div>
@@ -106,33 +90,30 @@
       </div>
     </div>
     <div class="education">
-      <div class="container-fluid">
-          <div class="col-12">
-              <h1 id="education-id">My knowledge is from...</h1>
-          </div>
-      </div>
-      <div class="container-fluid d-flex justify-content-center">
-        <div class="col-4">
-          <div class="card" style="width: 20rem;">
-            <img src="media/kodigo.jpeg" class="rounded" alt="kodigo">
-            <div class="card-body">
-              <h5 class="card-title">KODIGO</h5>
-              <p class="card-text">Front-end Developer</p>
-              <p class="card-text"><em>2023</em></p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="my-education">
+        <h1 id="path">Love learning new stuff!</h1>
+        <div class="grid text-center" style="display: flex; justify-content: space-between;">
+          <div class="g-col-6">
+            <div class="card" style="width: 18rem;">
+              <img src="media/kodigo.jpeg" class="card-img-top" alt="kodigo">
+              <div class="card-body">
+                <h5 class="card-title">Front-end Developer</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">KODIGO</h6>
+                <p class="card-text">2023</p>
+              </div>
             </div>
           </div>
-        </div class="col-4">
-          <div class="card" style="width: 18rem;">
-            <img src="media/ugb.jpeg" class="rounded" alt="ugb">
-            <div class="card-body">
-              <h5 class="card-title">Gerardo Barrios University</h5>
-              <p class="card-text">Computer Systems and Networking Engineering</p>
-              <p class="card-text"><em>still in course</em></p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+          <div class="g-col-6">
+            <div class="card" style="width: 18rem;">
+              <img src="media/ugb.jpeg" class="card-img-top" alt="ugb">
+              <div class="card-body">
+                <h5 class="card-title">Computer Systems and Networking Engineering</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Gerardo Barrios University</h6>
+                <p class="card-text">still in course</p>
+              </div>
             </div>
           </div>
-        </div>
+        </div>        
       </div>
     </div>
   </main>
@@ -140,7 +121,7 @@
     <div class="contact">
       <div class="row">
         <div class="col-12">
-          <h1 id="contact-id" class="text-center">Know me yourself!</h1>
+          <h1 id="my-data">Know me yourself!</h1>
           <p>Feel free to explore my portfolio to learn more about my projects and experiences, 
             and please do not hesitate to contact me if you have any questions or if you are interested in working with me. I'm will be very exited to meet you!.</p>
         </div>
